--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
   </style>
 </head>
+  
 <body>
+  <a href="page2.html">Go to Page 2</a>
+  
     <div style="display: flex; align-items: center;">
       <img src="octopus.jpg" alt="my photo" width="150" height="150" style="margin-right: 20px:">
       <div>
