--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <title>PROJECT LEVEL 2</title>
-      
-
-  </style>
+<style>
+  body{
+    background-color:grey;
+  }
+</style>
 </head>
   
 <body>
