--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <label for="female">female</label><br>
       
       <input type="radio" id="no-say" name="gender" value="no-say"
-      <label for ="no-say">prefer not to say</label><br>
+      <label for ="no-say">prefer not to say</label>
       
       <label for="dob">date of birth:</label>
       <input type="date" id="dob" name="dob"><br>
